--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+    </style>
     <meta
-      name="Exspress"
-      content="Exspress application"
+      name="Twitter"
+      content="Twitter is a free social networking microblogging service that allows registered members to broadcast short posts called tweets."
     />
-    <title>Exspress</title>
+    <title>Twitter</title>
   </head>
   <body>
     <div id="root"></div>
